{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "b81b88e5-bf56-660d-0bfd-cf0dd5912655",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_couchdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5984"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-05T09:36:06.317-08:00",
            "deny": [],
            "description": "Permite acesso CouchDB ao Database Node",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-couchdb",
            "log_config": [],
            "name": "gwsm-allow-couchdb",
            "network": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/networks/gwsm-vpc",
            "priority": 1000,
            "project": "gwsm-drivetrue-teste-interno",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-couchdb",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gwsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-05T09:36:06.173-08:00",
            "deny": [],
            "description": "Permite acesso RDP via Identity-Aware Proxy",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-iap-rdp",
            "log_config": [],
            "name": "gwsm-allow-iap-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/networks/gwsm-vpc",
            "priority": 1000,
            "project": "gwsm-drivetrue-teste-interno",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-iap-rdp",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gwsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-05T09:36:06.255-08:00",
            "deny": [],
            "description": "Permite acesso MySQL ao Database Node",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-mysql",
            "log_config": [],
            "name": "gwsm-allow-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/networks/gwsm-vpc",
            "priority": 1000,
            "project": "gwsm-drivetrue-teste-interno",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/firewalls/gwsm-allow-mysql",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.gwsm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gwsm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC para infraestrutura GWSM",
            "enable_ula_internal_ipv6": false,
            "id": "projects/gwsm-drivetrue-teste-interno/global/networks/gwsm-vpc",
            "mtu": 0,
            "name": "gwsm-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5693020175167015061",
            "project": "gwsm-drivetrue-teste-interno",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gwsm-drivetrue-teste-interno/global/networks/gwsm-vpc"
          }
        }
      ]
    }
  ]
}